@@ -1,5 +1,7 @@
 2.5.2 () -
 
+- TD-64 sync conflict deleted all annotations of the task
+        (thanks to Markus Beppler, Konstantin Vorobyev).
 - Removed deprecated 'alias._query' setting.
 
 2.5.1 (2016-02-24) 8b4ae3b54b44dfbd00b96cdd6dceb8dfe7cc1ea0
